[metadata]
name = lcviz
description = My pretty cool package
long_description = A package which contains stuff that do things
long_description_content_type = text/plain
keywords = astronomy, astrophysics
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://github.com/spacetelescope/stsci-package-template
edit_on_github = False
github_project = spacetelescope/stsci-package-template
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.17
    astropy>=4
python_requires = >=3.7

[options.extras_require]
test =
    pytest-astropy-header
    pytest-doctestplus
docs =
    sphinx-automodapi
    stsci_rtd_theme

[options.package_data]
lcviz = data/*

[entry_points]
stsci-package-template-example = lcviz.example_mod:main

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
astropy_header = True
doctest_plus = enabled

[flake8]
max-line-length = 79

[coverage:run]
source = lcviz
omit =
    lcviz/tests/*
    lcviz/version*
    */lcviz/tests/*
    */lcviz/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
