[metadata]
name = lcviz
description = A Jdaviz-based lightcurve analysis and visualization tool
long_description = A Jdaviz-based lightcurve analysis and visualization tool
long_description_content_type = text/plain
keywords = astronomy, astrophysics
author = JDADF Developers
author_email = kconroy@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://github.com/spacetelescope/lcviz
edit_on_github = True
github_project = spacetelescope/lcviz
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    astropy>=5
    jdaviz
    lightkurve
python_requires = >=3.8

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-tornasync
docs =
    sphinx-rtd-theme
    sphinx-astropy

[options.package_data]
lcviz =
    data/*
    *.vue
    plugins/*/*.vue

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
testpaths = "lcviz" "docs"
astropy_header = True
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --import-mode=append
filterwarnings =
    error
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:zmq\.eventloop\.ioloop is deprecated in pyzmq:DeprecationWarning
    ignore::DeprecationWarning:glue
    ignore::DeprecationWarning:bqplot
    ignore::DeprecationWarning:bqplot_image_gl
    ignore::DeprecationWarning:bqscales
    ignore::DeprecationWarning:ipykernel
    ignore::DeprecationWarning:traittypes
    ignore::DeprecationWarning:voila

[flake8]
max-line-length = 100

[coverage:run]
source = lcviz
omit =
    lcviz/tests/*
    lcviz/version*
    */lcviz/tests/*
    */lcviz/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
